<resources>
    <string name="app_name">MyWallet</string>


    <!-- String Login -->
    <string name="til_username">Nome do usuário</string>
    <string name="til_password">Senha</string>
    <string name="btn_login">Login</string>
    <string name="tv_info">Não tem conta? Cadastre-se</string>


    <string name="first_fragment">Fragmento 1</string>
    <string name="second_fragment">Fragmento 2</string>
    <string name="titleCadastrar">Cadastrar</string>
    <string name="tilEmail">E-mail</string>
    <string name="tilConfirmPassword">Confirmar senha</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_home">Home</string>
    <string name="tvEntrada">Entradas</string>
    <string name="tvGasto">Gastos</string>
    <string name="til_descricao">Descrição</string>
    <string name="til_categoria">Categoria</string>
    <string name="til_dataHora">Data.Hora</string>
    <string name="til_valor">Valor</string>
</resources>